fix-test6-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test6
  namespace: default
spec:
  selector:
    app: test6
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
