k8s-test3-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: test3-nodeport
  namespace: default
spec:
  selector:
    app: test3
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30033
  type: NodePort
