new-test3-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-test3-nodeport
  namespace: default
spec:
  selector:
    app: test3
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30034
  type: NodePort
