new-test3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-test3-service
  namespace: default
spec:
  selector:
    app: test3
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
