k8s-test3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test3-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /server/$2
spec:
  rules:
  - http:
      paths:
      - path: /test3(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: new-test3-service
            port:
              number: 80
