k8s-update-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test2-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /server/$2
spec:
  rules:
  - http:
      paths:
      - path: /test2/(.*)
        pathType: Prefix
        backend:
          service:
            name: test2
            port:
              number: 80
