ssl-ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tsts7-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
  - hosts:
    - ncatbird.ru
    secretName: ncatbird-tls
  rules:
  - host: ncatbird.ru
    http:
      paths:
      - path: /tsts7/server(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tsts7
            port:
              number: 80
